<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Reservation Details -->
    <LinearLayout
        android:id="@+id/ll_reservation_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reservation_theater"
                    android:textSize="@dimen/font_size_small"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/tv_theater_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Neo Armstrong Cyclone Jet Armstrong"
                    android:textSize="@dimen/font_size_medium"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:weightSum="99">

            <!-- Cinema -->
            <LinearLayout
                android:id="@+id/ll_cinema"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reservation_cinema"
                    android:textSize="@dimen/font_size_small"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/tv_cinema_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_selection_cinema"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="80"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_chevron_right"
                        android:layout_weight="20"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:id="@+id/ll_select_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reservation_date"
                    android:textSize="@dimen/font_size_small"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/tv_date_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_selection_date"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="75"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_chevron_right"
                        android:layout_weight="25"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Time -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reservation_time"
                    android:textSize="@dimen/font_size_small"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:id="@+id/ll_select_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/tv_time_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_selection_time"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="75"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_chevron_right"
                        android:layout_weight="25"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_movie_color_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_reservation_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/seatingAvailable"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_reservation_legend_available"
                android:textSize="@dimen/font_size_medium"
                android:layout_marginStart="8dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/seatingReserved"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/cd_seating_available"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_reservation_legend_reserved"
                android:textSize="@dimen/font_size_medium"
                android:layout_marginStart="8dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/seatingSelected"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_baseline_check_white"
                android:contentDescription="@string/cd_movie_selected"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_reservation_legend_selected"
                android:textSize="@dimen/font_size_medium"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="vertical"
            android:background="@drawable/bg_border_gray"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_reservation_movie_screen"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_small"/>

        </LinearLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/hsv_seating"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_movie_color_guide"
        app:layout_constraintBottom_toTopOf="@id/ll_selected_seats">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_seating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal"
            />
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/bt_zoom_in"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_baseline_zoom_in"
        android:background="@drawable/bg_rounded_button_accent"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/hsv_seating"
        app:layout_constraintEnd_toEndOf="@id/hsv_seating"/>

    <LinearLayout
        android:id="@+id/ll_selected_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom_controls">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_reservation_selected_seat"
            android:textSize="@dimen/font_size_small"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_seats"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

    </LinearLayout>

    <!-- Bottom Controls -->
    <LinearLayout
        android:id="@+id/ll_bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorGrayLight"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/label_reservation_total_price"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="PHP 42424242.42"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_reserve_seat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reserve_seat"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>