<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_h_data_divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <ImageView
        android:id="@+id/iv_horizontal_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/cd_movie_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/g_h_data_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/g_h_data_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/b_view_seat_map">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/iv_vertical_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_movie_poster"
                android:scaleType="fitCenter"
                android:layout_weight="40"/>

            <LinearLayout
                android:id="@+id/ll_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:layout_margin="8dp"
                android:layout_weight="60">

                <LinearLayout
                    android:id="@+id/ll_movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_name"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"/>

                    <TextView
                        android:id="@+id/tv_movie_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Two Brothers in Alien Invasion Tomato Monster Mexican Armada"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_movie_genre_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_genre"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"
                        />

                    <TextView
                        android:id="@+id/tv_movie_genre_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Comedy, Horror, Satire"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_advisory_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_movie_advisory_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_advisory_rating"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"
                        />

                    <TextView
                        android:id="@+id/tv_movie_advisory_rating_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R-16"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_movie_duration_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_duration"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"
                        />

                    <TextView
                        android:id="@+id/tv_movie_duration_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2 hrs"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_movie_release_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_release_date"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"
                        />

                    <TextView
                        android:id="@+id/tv_movie_release_date_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2020-10-23"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tv_movie_synopsis_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_movie_synopsis"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/colorGrayDark"
                        />

                    <TextView
                        android:id="@+id/tv_movie_synopsis_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum_3"
                        android:textSize="@dimen/font_size_medium"
                        android:textColor="@color/colorBlack"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/b_view_seat_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_seat_map"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>